Added PDA Visualisations
[Closes #3]

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>PDA to CFG Question Generator</title>
+    <script src="src/external/viz.min.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 <body>
-<script type="module" src="index.js"></script>
+<div id="pda"></div>
 </body>
 </html>
